data/all_generated_tests/raw_wast_tests/call_indirect_InvalidorInconsistentControlFlowGraph_4376.wast
;; 5. **Boundary Condition on Table Size**: Call `call_indirect` with an index right at the maximum bound of the table to ensure edge cases are handled properly.    - **Constraint**: Indexing at the boundary of defined table size.    - **CFG Relation**: Validates the CFG’s correctness in interpreting and executing edge cases accurately.

(assert_invalid
  (module
    (type $sig (func (param i32) (result i32)))
    (table 1 funcref)
    (elem (i32.const 0) $func)
    (func $func (param i32) (result i32) (local.get 0))
    (func (result i32)
      (i32.const 0)
      (call_indirect (type $sig) (i32.const 1))
    )
  )
  "out of bounds table access"
)